--- a/auth-service/src/package.json
+++ b/auth-service/src/package.json
@@ -21,6 +21,8 @@
     "rpc-websockets": "^7.9.0"
   },
   "devDependencies": {
-    "eslint": "^8.57.0"
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.1"
   }
 }
