--- a/auth-service/src/package.json
+++ b/auth-service/src/package.json
@@ -18,6 +18,7 @@
     "morgan": "~1.9.1",
     "node-input-validator": "^4.5.1",
     "pm2": "^5.3.1",
+    "reminder-service-utils": "github:angga2oioi/reminder-service-utils",
     "rpc-websockets": "^7.9.0"
   },
   "devDependencies": {
