--- a/auth-service/src/package.json
+++ b/auth-service/src/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "http-errors": "~1.6.3",
+    "moment-timezone": "^0.5.45",
     "mongoose": "^8.2.0",
     "morgan": "~1.9.1",
     "node-input-validator": "^4.5.1",
