--- a/reminder-service/src/package.json
+++ b/reminder-service/src/package.json
@@ -8,12 +8,14 @@
   },
   "dependencies": {
     "amqplib": "^0.10.3",
+    "axios": "^1.6.7",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "http-errors": "~1.6.3",
+    "moment": "^2.30.1",
     "mongoose": "^8.2.0",
     "morgan": "~1.9.1",
     "node-input-validator": "^4.5.1",
