--- a/reminder-service/src/package.json
+++ b/reminder-service/src/package.json
@@ -17,6 +17,7 @@
     "http-errors": "~1.6.3",
     "moment": "^2.30.1",
     "mongoose": "^8.2.0",
+    "mongoose-aggregate-paginate": "^2.0.2",
     "morgan": "~1.9.1",
     "node-input-validator": "^4.5.1",
     "pm2": "^5.3.1",
