--- a/schedule-service/dockerfile
+++ b/schedule-service/dockerfile
@@ -1,6 +1,8 @@
-FROM node:lts-alpine
+FROM node:alpine
 RUN mkdir -p /opt/app
 WORKDIR /opt/app
+RUN adduser --system app
+RUN apk add --no-cache git
 COPY src/ .
 RUN npm install
 USER app
