--- a/reminder-service/src/.env.example
+++ b/reminder-service/src/.env.example
@@ -1,7 +1,7 @@
-PORT=5001
-WSPORT=6001
+PORT=5002
+WSPORT=6002
 
-MONGO_DB_URL=mongodb://mongodb:27017/AuthService
+MONGO_DB_URL=mongodb://mongodb:27017/ReminderService
 AMQP_HOST=amqp://rabbit_mq
 
 AUTH_WSHOST=ws://auth_service:6001
