--- a/gateway-service/default.conf
+++ b/gateway-service/default.conf
@@ -1,10 +1,10 @@
-upstream auth_service {
-	server 127.0.0.1:5001;
+upstream auth {
+	server auth_service:5001;
 	keepalive 256;
 }
 
-upstream reminder_service {
-	server 127.0.0.1:5002;
+upstream reminder {
+	server reminder_service:5002;
 	keepalive 256;
 }
 
@@ -14,20 +14,20 @@ server {
 	proxy_read_timeout 600;
    	proxy_connect_timeout 600;
   	proxy_send_timeout 600; 
-	error_log   /dev/null;
-	access_log  /dev/null;
+	#error_log   /dev/null;
+	#access_log  /dev/null;
 
 	location ^~ /v1/users {
-		try_files $uri @auth_service;
+		try_files $uri @auth;
 	}
 
 	location ^~ /v1/reminders {
-		try_files $uri @reminder_service;
+		try_files $uri @reminder;
 	}
 
-	location @auth_service {
+	location @auth {
 		
-		proxy_pass http://auth_service;
+		proxy_pass http://auth;
 		proxy_set_header X-Real-IP $remote_addr;
 		proxy_set_header Host $host;
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -37,9 +37,9 @@ server {
 		proxy_set_header Connection "upgrade";
 	}
 
-	location @reminder_service {
+	location @reminder {
 		
-		proxy_pass http://reminder_service;
+		proxy_pass http://reminder;
 		proxy_set_header X-Real-IP $remote_addr;
 		proxy_set_header Host $host;
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
