--- a/schedule-service/src/package.json
+++ b/schedule-service/src/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start:production": "pm2 start processes.json --no-daemon",
+    "start:local": "node .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
